--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title            
     >Ibrahimation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h2>Hello World!</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas expedita ducimus et odio maxime, perferendis odit. Numquam distinctio dolores quo quis, quaerat sint quia quae, sapiente, aut amet nobis eos magnam cupiditate velit qui in cum repudiandae maiores! Natus voluptate animi in corrupti dolore unde beatae repudiandae consequatur, nam ducimus.</p>
+    <a href="#" class="link-arrow">Learn more</a>
 </body>
 </html>
