--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <a href="#" class="link-arrow">Learn more</a>
+    <ul class="list list--inline ">
+        <li class="list__item">Item 1</li>
+        <li class="list__item">Item 2</li>
+        <li class="list__item">Item 3</li>
+        <li class="list__item">Item 4</li>
+    </ul>
+    
+    <ul class="list list--tick ">
+        <li class="list__item">Item 1</li>
+        <li class="list__item">Item 2</li>
+        <li class="list__item">Item 3</li>
+        <li class="list__item">Item 4</li>
+    </ul>
 </body>
 </html>
