--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    
-      <div class="input-group">
-
-          <input
-            type="text"
-            class="input"
-            placeholder="Enter domain name here..."
-          />
-          <button class="btn btn--accent">Search</button>
+      
+      <div style="width: 30%; padding:4rem;">
+          <div class="card card--primary">
+              <div class="card__header">Heading</div>
+              <div class="card__body"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi porro veritatis sint aspernatur error eligendi atque accusantium natus! Necessitatibus vero odit rem cupiditate ducimus! Commodi rem hic id accusamus tempora! Odit quasi earum, error, dolores quaerat consequatur officiis nemo magnam dolorem autem ab repellat iusto voluptates quam voluptas! Exercitationem, necessitatibus!</p></div>
+          </div>
       </div>
   </body>
 </html>
