--- a/index.html
+++ b/index.html
@@ -10,40 +10,78 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link 
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="block container block-domain">
-      <header class="block__header">
-        <h2>Starting at 9$ per month</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde fugit sequi minima sapiente odio accusantium.</p>
-      </header>
-      <div class="input-group box-shadow">
-        <input type="text" class="input" placeholder="Enter domain name here..." />
-        <button class="btn btn--accent">
-          <svg class="icon icon--white">
-            <use xlink:href="images/sprite.svg#search"></use>
-          </svg>
-          Search
-        </button>
+    <section class="block container block-plans">
+      <div class="grid grid--1x3">
+        <div class="card card--secondary plan">
+          <div class="card__header">
+            <h3 class="plan__name">Business</h3>
+            <span class="plan__price">$24</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge-small">10% off</span>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+
+          <div class="card__body">
+            <ul class="list list--tick">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">Unlimited Bandwidth</li>
+              <li class="list__item">100GB SSD Storage</li>
+              <li class="list__item">3GB Ram</li>
+            </ul>
+            <a href="#" class="btn btn--outline btn--block">Buy now</a>
+          </div>
+        </div>
+
+        <div class="card card--primary plan plan--popular">
+          <div class="card__header">
+            <h3 class="plan__name">Business</h3>
+            <span class="plan__price">$24</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--primary badge-small">10% off</span>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+
+          <div class="card__body">
+            <ul class="list list--tick">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">Unlimited Bandwidth</li>
+              <li class="list__item">100GB SSD Storage</li>
+              <li class="list__item">3GB Ram</li>
+            </ul>
+            <a href="#" class="btn btn--outline btn--block">Buy now</a>
+          </div>
+        </div>
+
+        <div class="card card--secondary plan">
+          <div class="card__header">
+            <h3 class="plan__name">Business</h3>
+            <span class="plan__price">$24</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge-small">10% off</span>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+
+          <div class="card__body">
+            <ul class="list list--tick">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">Unlimited Bandwidth</li>
+              <li class="list__item">100GB SSD Storage</li>
+              <li class="list__item">3GB Ram</li>
+            </ul>
+            <a href="#" class="btn btn--outline btn--block">Buy now</a>
+          </div>
+        </div>
       </div>
-      <ul class="list block-domain__prices">
-        <li>.com $9</li>
-        <li><span class="badge badge--secondary">.sg $10</span></li>
-        <li>.space $11</li>
-        <li>.info $14</li>
-        <li>.net $10</li>
-        <li>.xyz $10</li>
-      </ul>
     </section>
-
-
 
     <script src="js/main.js"></script>
   </body>
 </html>
-
-
